# Fantasy500

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-server.sh
crates/server/: Cargo.toml
crates/server/data/: fortune500.json
crates/server/src/: auth_wallet.rs  chain_tx.rs  config.rs  db_indexes.rs  draft_logic.rs  error.rs  extract.rs  fortune500.rs  gemini.rs  http.rs  jwt.rs  main.rs  pick_commit.rs  quotes.rs  state.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  commissioner_report.rs  dotenv.rs  draft.rs  join_request.rs  league.rs  lib.rs  market.rs  roster.rs  scoring.rs  user.rs  waiver.rs  ws.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs  yahoo.rs
data/: sp500_yfinance.py
data/s&p500/: requirements.txt  sp500_close.csv  sp500_yfinance.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  phantom-to-cli.mjs  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  api.ts  config.ts  index.css  main.tsx  numberInput.ts  stockNames.ts  useFantasyWs.ts
frontend/src/components/: DraftBoard.tsx  MyTeam.tsx  NumberField.tsx  OnTheClock.tsx  PlayerPool.tsx  RecentPicks.tsx  StandingsChart.tsx  TickerBar.tsx  WeeklyCard.tsx
frontend/src/components/league-tabs/: CommissionerReportTab.tsx  DraftTab.tsx  LeagueTab.tsx  MatchupTab.tsx  RosterTab.tsx  SettingsTab.tsx  SolanaTab.tsx  index.ts
frontend/src/pages/: DraftPage.tsx  HomePage.tsx  LeaguePage.tsx
programs/fantasy_league/: Cargo.toml
programs/fantasy_league/src/: lib.rs
scripts/: deploy-devnet.sh
~/.config/solana/: id.json
