[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
mongodb.workspace = true
bson.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures.workspace = true
futures-util = { version = "0.3", features = ["sink"] }
async-trait.workspace = true
hex.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
bs58.workspace = true
jsonwebtoken.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rand = "0.8"
borsh = "1.5"
base64 = "0.22"
solana-sdk = "2.1"
solana-program = "2.1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
