[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
mongodb.workspace = true
bson.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json"] }
futures.workspace = true
urlencoding = "2"
