[package]
name = "fantasy_league"
version = "0.1.0"
description = "Fantasy500 — escrow, draft commitments, roster roots, payouts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fantasy_league"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
